--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
   <!-- Hero Section -->
   <section class="py-16 px-6 md:px-20 bg-gradient-to-br from-blue-100 to-white dark:from-gray-800 dark:to-gray-900">
-    <div class="flex flex-col md:flex-row items-center justify-center gap-10">
-      <!-- Text content -->
+    <div class="flex flex-col md:flex-row items-center justify-between gap-10">
+      <!-- Text -->
       <div class="text-center md:text-left max-w-xl">
         <h2 class="text-4xl md:text-5xl font-bold mb-4 leading-tight">Build Your Custom Roadmap to Success</h2>
         <p class="text-lg text-gray-600 dark:text-gray-300 mb-6">
@@ -54,9 +54,14 @@
         </a>
       </div>
 
-      <!-- Animation -->
-      <dotlottie-player src="https://lottie.host/b8872099-32de-4f60-83b0-699221a4adc9/aEWPutNam5.lottie"
-        background="transparent" speed="1" style="width: 500px; height: 300px" loop autoplay></dotlottie-player>
+      <!-- Responsive Animation -->
+      <dotlottie-player 
+        src="https://lottie.host/b8872099-32de-4f60-83b0-699221a4adc9/aEWPutNam5.lottie"
+        background="transparent" 
+        speed="1" 
+        loop autoplay
+        class="w-full max-w-[300px] md:max-w-[500px] aspect-[5/3]">
+      </dotlottie-player>
     </div>
   </section>
 
@@ -78,6 +83,7 @@
   <script src="auth.js"></script>
   <script>
     const container = document.getElementById("trending-roadmaps");
+
     function loadTrendingRoadmaps() {
       const predefined = window.predefinedRoadmaps || [];
       const custom = JSON.parse(localStorage.getItem("customRoadmaps") || "[]");
@@ -85,11 +91,12 @@
 
       container.innerHTML = trending.length > 0
         ? trending.map(r => `
-            <div class="bg-white dark:bg-gray-800 shadow-lg rounded-xl p-6 hover:shadow-xl transition border dark:border-gray-700">
-              <h4 class="font-bold text-xl mb-2">${r.title}</h4>
-              <p class="text-gray-600 dark:text-gray-300 mb-4">${r.description}</p>
-              <a href="roadmap-view.html?id=${r.id}" class="protected-link text-blue-600 dark:text-blue-400 font-semibold">View →</a>
-            </div>`).join('')
+          <div class="bg-white dark:bg-gray-800 shadow-lg rounded-xl p-6 hover:shadow-xl transition border dark:border-gray-700">
+            <h4 class="font-bold text-xl mb-2">${r.title}</h4>
+            <p class="text-gray-600 dark:text-gray-300 mb-4">${r.description}</p>
+            <a href="roadmap-view.html?id=${r.id}" class="protected-link text-blue-600 dark:text-blue-400 font-semibold">View →</a>
+          </div>
+        `).join('')
         : `<p class='text-center text-gray-500 dark:text-gray-400 col-span-3'>No trending roadmaps available.</p>`;
     }
 
@@ -121,7 +128,7 @@
       }
 
       document.querySelectorAll(".protected-link").forEach(link => {
-        link.addEventListener("click", (e) => {
+        link.addEventListener("click", e => {
           if (!user) {
             e.preventDefault();
             alert("Please sign in to access this page.");
@@ -151,16 +158,13 @@
       });
     }
 
+    // Event listeners
     document.getElementById("mobile-menu-toggle").addEventListener("click", () => {
       document.getElementById("mobile-menu").classList.toggle("hidden");
     });
 
-    document.getElementById("signin-btn").addEventListener("click", () => {
-      window.location.href = "signin.html";
-    });
-    document.getElementById("signin-btn-mobile").addEventListener("click", () => {
-      window.location.href = "signin.html";
-    });
+    document.getElementById("signin-btn").addEventListener("click", () => window.location.href = "signin.html");
+    document.getElementById("signin-btn-mobile").addEventListener("click", () => window.location.href = "signin.html");
     document.getElementById("signout-btn").addEventListener("click", () => {
       localStorage.removeItem("loggedInUser");
       window.location.reload();
@@ -170,6 +174,7 @@
       window.location.reload();
     });
 
+    // Init
     document.addEventListener("DOMContentLoaded", () => {
       loadTrendingRoadmaps();
       checkAuth();
